fixing div alignement

--- a/rps.css
+++ b/rps.css
@@ -28,7 +28,7 @@ button {
 .player-container {
     border:5px solid black;
     border-radius: 10px;
-    padding: 10px 50px;
+    padding: 0px 30px 10px;
 }
 
 .container {
@@ -40,4 +40,24 @@ button {
     color: purple;
     text-align: center;
     margin-bottom: 3px;
+}
+
+.user-profile, .computer-profile {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.score {
+    text-align: center;
+}
+
+.score h2 {
+    margin-top: 0;
+    font-weight: normal;
+}
+
+.score h3 {
+    margin-bottom: 0;
+    font-weight: normal;
 }
